feat: add create service data (#54)
