# proto/v1beta1/shield.pb.validate.go
@@ -17102,6 +17102,482 @@ var _ interface {
 	ErrorName() string
 } = ListActivitiesResponseValidationError{}
 
+// Validate checks the field values on ServiceDataKeyRequestBody with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the first error encountered is returned, or nil if there are no violations.
+func (m *ServiceDataKeyRequestBody) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on ServiceDataKeyRequestBody with the
+// rules defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// ServiceDataKeyRequestBodyMultiError, or nil if none found.
+func (m *ServiceDataKeyRequestBody) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *ServiceDataKeyRequestBody) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for Project
+
+	// no validation rules for Key
+
+	// no validation rules for Description
+
+	if len(errors) > 0 {
+		return ServiceDataKeyRequestBodyMultiError(errors)
+	}
+
+	return nil
+}
+
+// ServiceDataKeyRequestBodyMultiError is an error wrapping multiple validation
+// errors returned by ServiceDataKeyRequestBody.ValidateAll() if the
+// designated constraints aren't met.
+type ServiceDataKeyRequestBodyMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m ServiceDataKeyRequestBodyMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m ServiceDataKeyRequestBodyMultiError) AllErrors() []error { return m }
+
+// ServiceDataKeyRequestBodyValidationError is the validation error returned by
+// ServiceDataKeyRequestBody.Validate if the designated constraints aren't met.
+type ServiceDataKeyRequestBodyValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e ServiceDataKeyRequestBodyValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e ServiceDataKeyRequestBodyValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e ServiceDataKeyRequestBodyValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e ServiceDataKeyRequestBodyValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e ServiceDataKeyRequestBodyValidationError) ErrorName() string {
+	return "ServiceDataKeyRequestBodyValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e ServiceDataKeyRequestBodyValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sServiceDataKeyRequestBody.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = ServiceDataKeyRequestBodyValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = ServiceDataKeyRequestBodyValidationError{}
+
+// Validate checks the field values on ServiceDataKey with the rules defined in
+// the proto definition for this message. If any rules are violated, the first
+// error encountered is returned, or nil if there are no violations.
+func (m *ServiceDataKey) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on ServiceDataKey with the rules defined
+// in the proto definition for this message. If any rules are violated, the
+// result is a list of violation errors wrapped in ServiceDataKeyMultiError,
+// or nil if none found.
+func (m *ServiceDataKey) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *ServiceDataKey) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for Urn
+
+	// no validation rules for Id
+
+	if len(errors) > 0 {
+		return ServiceDataKeyMultiError(errors)
+	}
+
+	return nil
+}
+
+// ServiceDataKeyMultiError is an error wrapping multiple validation errors
+// returned by ServiceDataKey.ValidateAll() if the designated constraints
+// aren't met.
+type ServiceDataKeyMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m ServiceDataKeyMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m ServiceDataKeyMultiError) AllErrors() []error { return m }
+
+// ServiceDataKeyValidationError is the validation error returned by
+// ServiceDataKey.Validate if the designated constraints aren't met.
+type ServiceDataKeyValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e ServiceDataKeyValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e ServiceDataKeyValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e ServiceDataKeyValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e ServiceDataKeyValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e ServiceDataKeyValidationError) ErrorName() string { return "ServiceDataKeyValidationError" }
+
+// Error satisfies the builtin error interface
+func (e ServiceDataKeyValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sServiceDataKey.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = ServiceDataKeyValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = ServiceDataKeyValidationError{}
+
+// Validate checks the field values on CreateServiceDataKeyRequest with the
+// rules defined in the proto definition for this message. If any rules are
+// violated, the first error encountered is returned, or nil if there are no violations.
+func (m *CreateServiceDataKeyRequest) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on CreateServiceDataKeyRequest with the
+// rules defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// CreateServiceDataKeyRequestMultiError, or nil if none found.
+func (m *CreateServiceDataKeyRequest) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *CreateServiceDataKeyRequest) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	if all {
+		switch v := interface{}(m.GetBody()).(type) {
+		case interface{ ValidateAll() error }:
+			if err := v.ValidateAll(); err != nil {
+				errors = append(errors, CreateServiceDataKeyRequestValidationError{
+					field:  "Body",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		case interface{ Validate() error }:
+			if err := v.Validate(); err != nil {
+				errors = append(errors, CreateServiceDataKeyRequestValidationError{
+					field:  "Body",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		}
+	} else if v, ok := interface{}(m.GetBody()).(interface{ Validate() error }); ok {
+		if err := v.Validate(); err != nil {
+			return CreateServiceDataKeyRequestValidationError{
+				field:  "Body",
+				reason: "embedded message failed validation",
+				cause:  err,
+			}
+		}
+	}
+
+	if len(errors) > 0 {
+		return CreateServiceDataKeyRequestMultiError(errors)
+	}
+
+	return nil
+}
+
+// CreateServiceDataKeyRequestMultiError is an error wrapping multiple
+// validation errors returned by CreateServiceDataKeyRequest.ValidateAll() if
+// the designated constraints aren't met.
+type CreateServiceDataKeyRequestMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m CreateServiceDataKeyRequestMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m CreateServiceDataKeyRequestMultiError) AllErrors() []error { return m }
+
+// CreateServiceDataKeyRequestValidationError is the validation error returned
+// by CreateServiceDataKeyRequest.Validate if the designated constraints
+// aren't met.
+type CreateServiceDataKeyRequestValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e CreateServiceDataKeyRequestValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e CreateServiceDataKeyRequestValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e CreateServiceDataKeyRequestValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e CreateServiceDataKeyRequestValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e CreateServiceDataKeyRequestValidationError) ErrorName() string {
+	return "CreateServiceDataKeyRequestValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e CreateServiceDataKeyRequestValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sCreateServiceDataKeyRequest.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = CreateServiceDataKeyRequestValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = CreateServiceDataKeyRequestValidationError{}
+
+// Validate checks the field values on CreateServiceDataKeyResponse with the
+// rules defined in the proto definition for this message. If any rules are
+// violated, the first error encountered is returned, or nil if there are no violations.
+func (m *CreateServiceDataKeyResponse) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on CreateServiceDataKeyResponse with the
+// rules defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// CreateServiceDataKeyResponseMultiError, or nil if none found.
+func (m *CreateServiceDataKeyResponse) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *CreateServiceDataKeyResponse) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	if all {
+		switch v := interface{}(m.GetServiceDataKey()).(type) {
+		case interface{ ValidateAll() error }:
+			if err := v.ValidateAll(); err != nil {
+				errors = append(errors, CreateServiceDataKeyResponseValidationError{
+					field:  "ServiceDataKey",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		case interface{ Validate() error }:
+			if err := v.Validate(); err != nil {
+				errors = append(errors, CreateServiceDataKeyResponseValidationError{
+					field:  "ServiceDataKey",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		}
+	} else if v, ok := interface{}(m.GetServiceDataKey()).(interface{ Validate() error }); ok {
+		if err := v.Validate(); err != nil {
+			return CreateServiceDataKeyResponseValidationError{
+				field:  "ServiceDataKey",
+				reason: "embedded message failed validation",
+				cause:  err,
+			}
+		}
+	}
+
+	if len(errors) > 0 {
+		return CreateServiceDataKeyResponseMultiError(errors)
+	}
+
+	return nil
+}
+
+// CreateServiceDataKeyResponseMultiError is an error wrapping multiple
+// validation errors returned by CreateServiceDataKeyResponse.ValidateAll() if
+// the designated constraints aren't met.
+type CreateServiceDataKeyResponseMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m CreateServiceDataKeyResponseMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m CreateServiceDataKeyResponseMultiError) AllErrors() []error { return m }
+
+// CreateServiceDataKeyResponseValidationError is the validation error returned
+// by CreateServiceDataKeyResponse.Validate if the designated constraints
+// aren't met.
+type CreateServiceDataKeyResponseValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e CreateServiceDataKeyResponseValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e CreateServiceDataKeyResponseValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e CreateServiceDataKeyResponseValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e CreateServiceDataKeyResponseValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e CreateServiceDataKeyResponseValidationError) ErrorName() string {
+	return "CreateServiceDataKeyResponseValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e CreateServiceDataKeyResponseValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sCreateServiceDataKeyResponse.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = CreateServiceDataKeyResponseValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = CreateServiceDataKeyResponseValidationError{}
+
 // Validate checks the field values on
 // CheckResourcePermissionResponse_ResourcePermissionResponse with the rules
 // defined in the proto definition for this message. If any rules are
